testdata/baselines/reference/submodule/compiler/moduleSharesNameWithImportDeclarationInsideIt4.errors.txt
moduleSharesNameWithImportDeclarationInsideIt4.ts(8,18): error TS2694: Namespace 'Z' has no exported member 'M'.


==== moduleSharesNameWithImportDeclarationInsideIt4.ts (1 errors) ====
    module Z.M {
        export function bar() {
            return "";
        }
    }
    module A.M {
        interface M { }
        import M = Z.M;
                     ~
!!! error TS2694: Namespace 'Z' has no exported member 'M'.
        export function bar() {
        }
        M.bar(); // Should call Z.M.bar
    }